add missing repository declaration

--- a/configurators/pom.xml
+++ b/configurators/pom.xml
@@ -16,6 +16,14 @@
    <properties>
      <skipTests>true</skipTests>
   </properties>
+
+  <repositories>
+    <repository>
+      <id>maven-restlet</id>
+      <name>Public online Restlet repository</name>
+      <url>http://maven.restlet.org</url>
+    </repository>    
+  </repositories>
   
   <dependencies>
 	 <dependency>
