--- a/driver-one/src/main/resources/tcloud.properties
+++ b/driver-one/src/main/resources/tcloud.properties
@@ -32,9 +32,9 @@ java.naming.provider.url = tcp://localhost:61616
 # ONE Driver Configuration Section
 #--------------------------------------------------------------------------------------
 oneUrl=http://84.21.173.28:2633/RPC2
-oneUser=oneadmin
+oneUser=XXX
 oneNetworkBridge=br0
-onePassword=8944aada99d6d0121494dd0ac8129db653bc1f4a
+onePassword=XXX
 oneEnvironmentPath=/home/tcloud/tcloud-server/repository
 #oneEnvironmentPath=/opt/claudia/repository
 oneKernel=/boot/vmlinuz-2.6.26-2-xen-amd64
@@ -48,9 +48,9 @@ arch=
 
 # VMWare Driver Configuration Section
 #--------------------------------------------------------------------------------------
-vmwareUrl=https://10.95.129.35/sdk
-vmwareUser=Administrator
-vmwarePassword=cloud6000
+vmwareUrl=https://IP/sdk
+vmwareUser=XXX
+vmwarePassword=XXX
 vmwareIgnorecert=true
 vmwareTemplateRootFolder=PCloud/vm/Discovered virtual machine/templates/cpr
 usingcacheTemplate=true
@@ -59,9 +59,9 @@ cacheRefreshTime=15
 
 # Monitoring Driver Configuration Section
 #--------------------------------------------------------------------------------------
-monitoring.wasup.uri=http://piolin_wasup.hi.inet:7001/wasup
-monitoring.wasup.login=rps
-monitoring.wasup.password=rps1
+monitoring.wasup.uri=http://XX:7001/wasup
+monitoring.wasup.login=XXX
+monitoring.wasup.password=XXX
 
 # Amazon Driver Configuration Section
 #--------------------------------------------------------------------------------------
@@ -78,6 +78,6 @@ monitoring.wasup.password=rps1
 
 
 #Flexiscale Driver Configuration Section
-flexiscaleUser=4caast@flexiant.com
-flexiscalePassword=tn5AW7Bx
+flexiscaleUser=XXX
+flexiscalePassword=XXX
 flexiscaleAddresss=https://api2.flexiscale.com/index.php
