--- a/driver-one/src/main/resources/tcloud.properties
+++ b/driver-one/src/main/resources/tcloud.properties
@@ -48,9 +48,9 @@ arch=
 
 # VMWare Driver Configuration Section
 #--------------------------------------------------------------------------------------
-vmwareUrl=https://10.95.129.35/sdk
-vmwareUser=Administrator
-vmwarePassword=cloud6000
+vmwareUrl=https://xxx/sdk
+vmwareUser=xxx
+vmwarePassword=xxx
 vmwareIgnorecert=true
 vmwareTemplateRootFolder=PCloud/vm/Discovered virtual machine/templates/cpr
 usingcacheTemplate=true
@@ -59,9 +59,9 @@ cacheRefreshTime=15
 
 # Monitoring Driver Configuration Section
 #--------------------------------------------------------------------------------------
-monitoring.wasup.uri=http://piolin_wasup.hi.inet:7001/wasup
-monitoring.wasup.login=rps
-monitoring.wasup.password=rps1
+monitoring.wasup.uri=http://xxx:7001/wasup
+monitoring.wasup.login=xxx
+monitoring.wasup.password=xxx
 
 # Amazon Driver Configuration Section
 #--------------------------------------------------------------------------------------
@@ -78,6 +78,6 @@ monitoring.wasup.password=rps1
 
 
 #Flexiscale Driver Configuration Section
-flexiscaleUser=4caast@flexiant.com
-flexiscalePassword=tn5AW7Bx
+flexiscaleUser=xxx
+flexiscalePassword=xxx
 flexiscaleAddresss=https://api2.flexiscale.com/index.php
